01.firmware/source-code/build/log/idf_py_stdout_output_51597
[1/444] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/src/extra/others/fragment/lv_fragment.c.obj
[2/444] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/src/extra/others/fragment/lv_fragment_manager.c.obj
[3/444] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/src/extra/others/gridnav/lv_gridnav.c.obj
[4/444] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/src/extra/libs/tiny_ttf/lv_tiny_ttf.c.obj
[5/444] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/src/extra/others/ime/lv_ime_pinyin.c.obj
[6/444] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/src/extra/libs/rlottie/lv_rlottie.c.obj
[7/444] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/src/extra/lv_extra.c.obj
[8/444] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/src/extra/libs/fsdrv/lv_fs_fatfs.c.obj
FAILED: esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/src/extra/libs/fsdrv/lv_fs_fatfs.c.obj 
/Users/wangjiaqi/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20241119/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4.1-dirty\" -DLV_CONF_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/wangjiaqi/Documents/Github/test/build/config -I/Users/wangjiaqi/Documents/Github/test/components/lvgl__lvgl -I/Users/wangjiaqi/Documents/Github/test/components/lvgl__lvgl/src -I/Users/wangjiaqi/Documents/Github/test/components -I/Users/wangjiaqi/Documents/Github/test/components/lvgl__lvgl/examples -I/Users/wangjiaqi/Documents/Github/test/components/lvgl__lvgl/demos -I/Users/wangjiaqi/esp/esp-idf/components/newlib/platform_include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/config/include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/config/include/freertos -I/Users/wangjiaqi/esp/esp-idf/components/freertos/config/riscv/include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/Users/wangjiaqi/esp/esp-idf/components/freertos/esp_additions/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/include/soc/esp32p4 -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/dma/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/ldo/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/port/esp32p4/. -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/port/esp32p4/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/port/esp32p4/private_include -I/Users/wangjiaqi/esp/esp-idf/components/heap/include -I/Users/wangjiaqi/esp/esp-idf/components/heap/tlsf -I/Users/wangjiaqi/esp/esp-idf/components/log/include -I/Users/wangjiaqi/esp/esp-idf/components/soc/include -I/Users/wangjiaqi/esp/esp-idf/components/soc/esp32p4 -I/Users/wangjiaqi/esp/esp-idf/components/soc/esp32p4/include -I/Users/wangjiaqi/esp/esp-idf/components/soc/esp32p4/register -I/Users/wangjiaqi/esp/esp-idf/components/hal/platform_port/include -I/Users/wangjiaqi/esp/esp-idf/components/hal/esp32p4/include -I/Users/wangjiaqi/esp/esp-idf/components/hal/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_rom/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_rom/esp32p4/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_rom/esp32p4/include/esp32p4 -I/Users/wangjiaqi/esp/esp-idf/components/esp_rom/esp32p4 -I/Users/wangjiaqi/esp/esp-idf/components/esp_common/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_system/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_system/port/soc -I/Users/wangjiaqi/esp/esp-idf/components/esp_system/port/include/riscv -I/Users/wangjiaqi/esp/esp-idf/components/esp_system/port/include/private -I/Users/wangjiaqi/esp/esp-idf/components/riscv/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/include/apps -I/Users/wangjiaqi/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/wangjiaqi/esp/esp-idf/components/lwip/lwip/src/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/freertos/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/wangjiaqi/esp/esp-idf/components/esp_timer/include -I/Users/wangjiaqi/esp/esp-idf/components/fatfs/diskio -I/Users/wangjiaqi/esp/esp-idf/components/fatfs/src -I/Users/wangjiaqi/esp/esp-idf/components/fatfs/vfs -I/Users/wangjiaqi/esp/esp-idf/components/wear_levelling/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_partition/include -I/Users/wangjiaqi/esp/esp-idf/components/sdmmc/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_sdmmc/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_gpio/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_sdspi/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_spi/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_pm/include -march=rv32imafc_zicsr_zifencei_xesppie -mabi=ilp32f  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/wangjiaqi/Documents/Github/test=. -fmacro-prefix-map=/Users/wangjiaqi/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/src/extra/libs/fsdrv/lv_fs_fatfs.c.obj -MF esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/src/extra/libs/fsdrv/lv_fs_fatfs.c.obj.d -o esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/src/extra/libs/fsdrv/lv_fs_fatfs.c.obj -c /Users/wangjiaqi/Documents/Github/test/components/lvgl__lvgl/src/extra/libs/fsdrv/lv_fs_fatfs.c
/Users/wangjiaqi/Documents/Github/test/components/lvgl__lvgl/src/extra/libs/fsdrv/lv_fs_fatfs.c: In function 'fs_dir_read':
/Users/wangjiaqi/Documents/Github/test/components/lvgl__lvgl/src/extra/libs/fsdrv/lv_fs_fatfs.c:20:17: error: unknown type name 'FF_FILINFO'; did you mean 'FILINFO'?
   20 | #define FILINFO FF_FILINFO
      |                 ^~~~~~~~~~
/Users/wangjiaqi/Documents/Github/test/components/lvgl__lvgl/src/extra/libs/fsdrv/lv_fs_fatfs.c:260:5: note: in expansion of macro 'FILINFO'
  260 |     FILINFO fno;
      |     ^~~~~~~
/Users/wangjiaqi/Documents/Github/test/components/lvgl__lvgl/src/extra/libs/fsdrv/lv_fs_fatfs.c:264:32: error: passing argument 2 of 'f_readdir' from incompatible pointer type [-Wincompatible-pointer-types]
  264 |         res = f_readdir(dir_p, &fno);
      |                                ^~~~
      |                                |
      |                                int *
In file included from /Users/wangjiaqi/Documents/Github/test/components/lvgl__lvgl/src/extra/libs/fsdrv/lv_fs_fatfs.c:12:
/Users/wangjiaqi/esp/esp-idf/components/fatfs/src/ff.h:321:41: note: expected 'FILINFO *' but argument is of type 'int *'
  321 | FRESULT f_readdir (FF_DIR* dp, FILINFO* fno);                                                   /* Read a directory item */
      |                                ~~~~~~~~~^~~
/Users/wangjiaqi/Documents/Github/test/components/lvgl__lvgl/src/extra/libs/fsdrv/lv_fs_fatfs.c:267:15: error: request for member 'fattrib' in something not a structure or union
  267 |         if(fno.fattrib & AM_DIR) {
      |               ^
/Users/wangjiaqi/Documents/Github/test/components/lvgl__lvgl/src/extra/libs/fsdrv/lv_fs_fatfs.c:269:31: error: request for member 'fname' in something not a structure or union
  269 |             strcpy(&fn[1], fno.fname);
      |                               ^
/Users/wangjiaqi/Documents/Github/test/components/lvgl__lvgl/src/extra/libs/fsdrv/lv_fs_fatfs.c:271:28: error: request for member 'fname' in something not a structure or union
  271 |         else strcpy(fn, fno.fname);
      |                            ^
[9/444] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/src/extra/others/monkey/lv_monkey.c.obj
[10/444] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/src/extra/others/msg/lv_msg.c.obj
[11/444] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/src/extra/libs/sjpg/tjpgd.c.obj
[12/444] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/src/extra/others/imgfont/lv_imgfont.c.obj
[13/444] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/src/extra/others/snapshot/lv_snapshot.c.obj
[14/444] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/src/extra/libs/sjpg/lv_sjpg.c.obj
[15/444] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/src/extra/themes/mono/lv_theme_mono.c.obj
[16/444] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/src/extra/themes/basic/lv_theme_basic.c.obj
[17/444] Building C object esp-idf/lvgl__lvgl/CMakeFiles/__idf_lvgl__lvgl.dir/src/extra/themes/default/lv_theme_default.c.obj
ninja: build stopped: subcommand failed.
